# BGTU

./: CMakeLists.txt  README.md  cmake_build.bat
src/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp
src/common/: parse_cursor.cpp  parse_cursor.h
src/controllers/: math_expression_controller.cpp  math_expression_controller.h
src/interfaces/: i_parsed_object_router.h
src/models/interfaces/: i_node.h  i_parsed_number_visitable.h  i_parsed_number_visitor.h  i_parsed_object_visitable.h  i_parsed_object_visitor.h  i_parsed_operator_visitable.h  i_parsed_operator_visitor.h
src/models/operands/: base_operand.h  number.cpp  number.h
src/models/operators/: addition_operator.cpp  addition_operator.h  base_binary_operator.h  division_operator.cpp  division_operator.h  multiply_operator.cpp  multiply_operator.h  subtraction_operator.cpp  subtraction_operator.h
src/models/parsed_objects/: parsed_addition_operator.cpp  parsed_addition_operator.h  parsed_division_operator.cpp  parsed_division_operator.h  parsed_multiply_operator.cpp  parsed_multiply_operator.h  parsed_number.cpp  parsed_number.h  parsed_object.h  parsed_operator.cpp  parsed_operator.h  parsed_subtraction_operator.cpp  parsed_subtraction_operator.h
src/parsers/: addition_operator_parser.cpp  addition_operator_parser.h  base_parser.h  division_operator_parser.cpp  division_operator_parser.h  multiply_operator_parser.cpp  multiply_operator_parser.h  number_parser.cpp  number_parser.h  subtraction_operator_parser.cpp  subtraction_operator_parser.h  termination_parser.cpp  termination_parser.h
(+2 files in other folders)
